crates/plotnik-lib/tests/02-parser/recovery_incomplete/missing_negated_field_name.txt
(call -)
==== diagnostics ====
error: expected a field name
 --> query.ptk:1:8
  |
1 | (call -)
  |        ^
  |
help: e.g., `-value`
